update valid by email

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,3 +4,5 @@ message.regSucc= Đăng ký tài khoản thành công! Vui lòng kiểm tra emai
 # Các thông báo lỗi xác thực
 auth.message.invalidToken=Token không hợp lệ.
 auth.message.expired=Token đã hết hạn.
+# Xác nhận đổi mật khẩu
+message.valid= Xác minh thành công! Vui lòng kiểm tra email để đổi mật khẩu mới cho tài khoản của bạn.
